openpearl-code/testsuite/must_not_compile/01_typeFixed/010_fixed_precision_too_large.expect
010_fixed_precision_too_large.prl:5:12: ERROR : Syntax error : precision for FIXED must be between 0 and 63
DCL f FIXED(64);
            ^
