openpearl-code/testsuite/must_not_compile/01_typeFixed/010_fixed_precision_too_large.prl
MODULE(m);

PROBLEM;

DCL f FIXED(64);

MODEND;

